@@ -109,6 +109,10 @@ check_type_size(off_t SIZEOF_OFF_T)
 if(LFS_SENSITIVE)
     set(LFS_ALIAS_TYPE long)
     math(EXPR LFS_ALIAS_BITS "${SIZEOF_LONG} * 8")
+elseif(CMAKE_ANDROID_ARCH_ABI)
+    check_type_size(off64_t SIZEOF_OFF64_T)
+    set(LFS_ALIAS_TYPE off64_t)
+    math(EXPR LFS_ALIAS_BITS "${SIZEOF_OFF64_T} * 8")
 else()
     set(LFS_ALIAS_TYPE off_t)
     math(EXPR LFS_ALIAS_BITS "${SIZEOF_OFF_T} * 8")
