@@ -80,7 +80,7 @@ if((MSVC AND CMAKE_GENERATOR_PLATFORM STREQUAL "x64") OR (NOT MSVC AND CMAKE_SYS
     else()
         set(PLATFORM_DEFINITIONS OPT_GENERIC)
     endif()
-elseif((MSVC AND CMAKE_GENERATOR_PLATFORM MATCHES "|Win32") OR (NOT MSVC AND CMAKE_SYSTEM_PROCESSOR MATCHES "i386"))
+elseif((MSVC AND CMAKE_GENERATOR_PLATFORM MATCHES "|Win32") OR (NOT MSVC AND CMAKE_SYSTEM_PROCESSOR MATCHES "i.86"))
     if(TRUE)
         set(PLATFORM_DEFINITIONS OPT_I386)
         target_sources(${TARGET} PRIVATE
@@ -126,7 +126,7 @@ if(MSVC)
     endif()
     if((MSVC AND CMAKE_GENERATOR_PLATFORM STREQUAL "x64") OR (NOT MSVC AND CMAKE_SYSTEM_PROCESSOR MATCHES "([xX]86_|AMD|amd)64"))
         set(MACHINE amd64)
-    elseif((MSVC AND CMAKE_GENERATOR_PLATFORM MATCHES "|Win32") OR (NOT MSVC AND CMAKE_SYSTEM_PROCESSOR MATCHES "i386"))
+    elseif((MSVC AND CMAKE_GENERATOR_PLATFORM MATCHES "|Win32") OR (NOT MSVC AND CMAKE_SYSTEM_PROCESSOR MATCHES "i.86"))
         set(MACHINE x86)
     endif()
     list(TRANSFORM PLATFORM_DEFINITIONS PREPEND /D)
